--- a/Payment-web/index.html
+++ b/Payment-web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Payment</title>
 
     <!-- Global Styles -->
     <link rel="stylesheet" href="/src/assets/css/bootstrap-lib/bootstrap.min.css" />
